# ossdk

./: .env.example  .gitignore  Anchor.toml  BOUNTY.md  PROJECT_STATUS.md  README.md  SDK_COMPLETE.md  SDK_TEST_RESULTS.md  SUBMISSION_CHECKLIST.md  TASKS.md  TRANSFER_HOOK_PLAYGROUND.rs  WHAT_ARE_WE_BUILDING.md  bounty.txt  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: test.yml
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
programs/sss-core/: Cargo.toml
programs/sss-core/src/: lib.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
sdk/cli/: README.md  package.json
sdk/cli/src/: index.ts
sdk/core/: README.md  package.json
sdk/core/examples/: basic-usage.ts  comprehensive-test.ts
sdk/core/src/: client.ts  index.ts  presets.ts  types.ts  (+1 more)
services/compliance/: Dockerfile  package.json
services/db/: init.sql
services/indexer/: Dockerfile  package-lock.json  package.json
services/mint-burn/: Dockerfile  package.json
services/webhooks/: Dockerfile  package.json
tests/: README.md  SERVICE_TESTING.md  check-mint-extensions.ts  package.json  sss-core.ts  test-local.ts  test-services.sh  test-transfer-hook-e2e.ts  test-transfer-hook-enforcement.ts  test-transfer-hook-sdk.ts  test-transfer-hook.ts  tsconfig.json
tests/cli/: cli-blacklist.test.ts  cli-freeze-thaw.test.ts  cli-init.test.ts  cli-mint-burn.test.ts  cli-minters.test.ts  cli-pause-unpause.test.ts  cli-seize.test.ts
tests/integration/: sss-1-integration.test.ts  sss-2-integration.test.ts
(+17 files in other folders)
