[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard - Core Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token-2022 = "1.0.0"
