[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard - Transfer Hook Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-token-2022 = "1.0.0"
spl-transfer-hook-interface = "0.5.0"
